--- a/kubernetes/hyperv/Vagrantfile
+++ b/kubernetes/hyperv/Vagrantfile
@@ -1,8 +1,8 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-# username = ENV['VAGRANT_USERNAME'] || 'admin'
-# password = ENV['VAGRANT_PASSWORD'] || 'admin'
+username = ENV['VAGRANT_USERNAME'] || 'admin'
+password = ENV['VAGRANT_PASSWORD'] || 'admin'
 
 BOX = "hashicorp/bionic64"
 BOX_VERSION = "1.0.282"
@@ -66,11 +66,7 @@ Vagrant.configure("2") do |config|
       config.vm.box = opts[:box]
       config.vm.box_version = opts[:box_version]
       config.vm.hostname = opts[:name]
-
-      # config.ssh.insert_key = false # 1
-      # config.ssh.private_key_path = ['~/.vagrant.d/insecure_private_key', '~/.ssh/id_rsa'] # 2
-      # config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "~/.ssh/authorized_keys" # 3
-      
+  
       config.vm.network "public_network", bridge: "External"
                   
       opts[:scripts].each do |scripts|
