--- a/kubernetes/infrastructure/Vagrantfile
+++ b/kubernetes/infrastructure/Vagrantfile
@@ -3,10 +3,11 @@
 
 username = ENV['VAGRANT_USERNAME'] || 'admin'
 password = ENV['VAGRANT_PASSWORD'] || 'admin'
+bridge = ENV['VAGRANT_NETWORK_BRIDGE'] || 'External'
 
 BOX = "hashicorp/bionic64"
 BOX_VERSION = "1.0.282"
-BOX_MEM = "2048"
+BOX_MEM = "1024"
 BOX_MEM_MAX = "3072"
 BOX_CPU = "2"
 BOX_BOOTSTRAP = "bootstrap-default.sh"
@@ -23,10 +24,10 @@ servers = [
     :scripts => [
       {
         :bootstrap => BOX_BOOTSTRAP,
-        # :args => [username,password]
+        :args => [username,password]
       },
      ]
-  },
+    },
   {
     :name => "k8-worker-node-1",    
     :type => "slave",
@@ -38,7 +39,7 @@ servers = [
     :scripts => [
       {
         :bootstrap => BOX_BOOTSTRAP,
-        # :args => [username,password]
+        :args => [username,password]
       },
     ]
   },
@@ -53,13 +54,14 @@ servers = [
     :scripts => [
       {
         :bootstrap => BOX_BOOTSTRAP,
-        # :args => [username,password]
+        :args => [username,password]
       },
     ]
   }
 ]
 
 Vagrant.configure("2") do |config|
+  
   servers.each do |opts|    
     config.vm.define opts[:name] do |config|
       config.vm.synced_folder '.', '/vagrant', disabled: true
@@ -67,7 +69,7 @@ Vagrant.configure("2") do |config|
       config.vm.box_version = opts[:box_version]
       config.vm.hostname = opts[:name]
   
-      config.vm.network "public_network", bridge: "External"
+      config.vm.network "public_network", bridge: bridge
                   
       opts[:scripts].each do |scripts|
         if scripts[:args]
