--- a/kubernetes/configuration/playbooks/configure_worker_node.yml
+++ b/kubernetes/configuration/playbooks/configure_worker_node.yml
@@ -24,5 +24,5 @@
     - name: copy generated node_joined.txt logs to local host
       fetch:
         src: /home/ansible/node_joined.txt
-        dest: ../output/node_joined-{{ansible_host}}.txt
+        dest: ../.output/node_joined-{{ansible_host}}.txt
         flat: yes
