--- a/kubernetes/configuration/setup_k8.yml
+++ b/kubernetes/configuration/setup_k8.yml
@@ -2,3 +2,4 @@
 - import_playbook: playbooks/kube-dependencies.yml
 - import_playbook: playbooks/configure_master_node.yml
 - import_playbook: playbooks/configure_worker_node.yml
+- import_playbook: playbooks/configure_k8_addons.yml
